# tinydiffusion

./: .gitignore  README.md  data.py  ddpm.py  dit.py  flow_matching.py  mean_flow.py  pyproject.toml  setup.sh
tests/: test_data.py  test_dit.py
