[project]
name = "tinydiffusion"
version = "0.1.0"
description = "Simple diffusion model implementations"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0", 
    "lightning>=2.0.0",
    "numpy",
    "tqdm",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
