[project]
name = "tinydiffusion"
version = "0.1.0"
description = "Simple diffusion model implementations"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "einops",
    "lightning>=2.0.0",
    "numpy",
    "tqdm",
    "matplotlib",
    "seaborn",
    "pytest",
    "timm",
]
[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pre-commit>=3.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
]
